# potter-potter

./: Anchor.toml
app/potter-potter/: package.json  vite.config.ts
app/potter-potter/app/: root.tsx
app/potter-potter/app/components/: ClientOnly.tsx  CreateFactory.tsx  CreateToken.tsx  ManageToken.tsx  TokenList.tsx  WalletButton.tsx
app/potter-potter/app/lib/: WalletProvider.tsx  idl.json  useAnchorProgram.ts
app/potter-potter/app/routes/: home.tsx
programs/potter-potter/: Cargo.toml
programs/potter-potter/src/: errors.rs  lib.rs
tests/: potter-potter.ts
