[package]
name = "potter-potter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "potter_potter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []

[dependencies]
anchor-lang =  "0.32.1"
anchor-spl = "0.32.1"
mpl-token-metadata = "5.1.1"
spl-discriminator = "0.5.1"
spl-tlv-account-resolution = "0.11.1"
spl-transfer-hook-interface = "2.1.0"
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
